# advent_of_code

16_valves/: Cargo.toml
16_valves/src/: main.rs
1_calories/: Cargo.toml
1_calories/src/: inventory.rs  main_a.rs  main_b.rs
2_rockpaperscissors/: Cargo.toml
2_rockpaperscissors/src/: main_a.rs  main_b.rs  rps.rs
3_rucksack/: Cargo.toml
3_rucksack/src/: main.rs  main_a.rs  main_b.rs  rs.rs
4_cleaning/: Cargo.toml
4_cleaning/src/: main.rs
5_crane/: Cargo.toml
5_crane/src/: main.rs
6_communication/: Cargo.toml
6_communication/src/: main.rs
7_filesystem/src/: main.rs
8_trees/src/: main.rs
9_ropes/src/: main.rs
aoc_22_1/: Cargo.toml
aoc_22_1/src/: main.rs  main_a.rs
