[package]
name = "rockpaperscissors"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rockpaperscissors_a"
path = "src/main_a.rs"

[[bin]]
name = "rockpaperscissors_b"
path = "src/main_b.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
